--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 
                             <input type="hidden" name="_subject" value="Nova pessoa em contato!">
                             <input type="hidden" name="_autoresponse" value="I see you sent me a message, thanks for getting in touch, I'll get back to you as soon as possible!">
-                            <input type="hidden" name="_next" value="http://127.0.0.1:5500/assets/html/thanks.html">
-
+                            <input type="hidden" name="_next" value="https://vcosta-portifolio.vercel.app/assets/html/thanks.html">
+                            
                             <div class="row-form">
                             <label for="enviar">Attach file<i class="ri-file-line ri-xl iwhite"></i></label>
                             <input type="file" name="attachment" id="enviar" accept="image/png, image/jpeg">
