--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vinícius Costa | Portifólio</title>
     <meta name="theme-color" content="#8e94f2ff" />
     <meta name="description" 
-    content="Official portfolio of Vinícius Costa">
+    content="Official portfolio of Vinícius Costa.">
 
     <!-- icones -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
