--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                         <p>24/7 support</p>
                     </div>
                 </div>
-                <button>
-                    Download CV
-                    <i class="ri-download-fill ri-xl iwhite"></i>
-                </button>
+                <a href="/Currículo.pdf" download="ViníciusCosta_CV">
+                    <button>
+                        Download CV
+                        <i class="ri-download-fill ri-xl iwhite"></i>
+                    </button>
+                </a>
             </section>
             <section class="skills" id="skills">
                 <div class="title">
